# electronics_store

./: main.py  pyproject.toml
electronics_store/: exception_classes.py  item.py  keyboard.py  phone.py
tests/: conftest.py  items_test.csv  test_item.py  test_keyboard.py  test_phone.py  test_utils.py
