[tool.poetry]
name = "electronics-store"
version = "0.1.0"
description = ""
authors = ["Sam <iaiznura@gmail.com>"]
readme = "README.md"
packages = [{include = "electronics_store"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.28.2"
pytest = "^7.2.1"
pytest-cov = "^4.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
